--- a/examples/typescript/cli-agent/package.json
+++ b/examples/typescript/cli-agent/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint -c .eslintrc.json *.ts",
     "lint-fix": "eslint -c .eslintrc.json *.ts --fix",
     "format": "prettier -c .prettierrc --write \"**/*.{ts,js,cjs,json,md}\"",
-    "format-check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\""
+    "format-check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\"",
+    "dev:web": "vite",
+    "build": "vite build",
+    "start:server": "ts-node src/server/server.ts",
+    "dev:server": "nodemon src/server/server.ts"
   },
   "dependencies": {
     "@langchain/anthropic": "^0.3.12",
@@ -20,10 +24,20 @@
     "@wardenprotocol/warden-agent-kit-core": "0.0.24",
     "@wardenprotocol/warden-langchain": "0.0.7",
     "dotenv": "^16.4.5",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17"
   }
 }
