--- a/package.json
+++ b/package.json
@@ -9,13 +9,35 @@
   ],
   "packageManager": "npm@8.9.0",
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "turbo": "^2.3.3",
     "typedoc": "^0.27.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vite": "^6.1.0",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17"
   },
   "dependencies": {
     "@graphql-codegen/cli": "^5.0.4",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "ethers": "^6.13.5",
-    "graphql-request": "^7.1.2"
+    "graphql-request": "^7.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "scripts": {
+    "start": "NODE_OPTIONS='--no-warnings' ts-node ./cli-agent.ts",
+    "dev": "nodemon ./cli-agent.ts",
+    "lint": "eslint -c .eslintrc.json *.ts",
+    "lint-fix": "eslint -c .eslintrc.json *.ts --fix",
+    "format": "prettier -c .prettierrc --write \"**/*.{ts,js,cjs,json,md}\"",
+    "format-check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\"",
+    "dev:web": "vite",
+    "build": "vite build",
+    "start:server": "ts-node examples/typescript/cli-agent/src/server/server.ts",
+    "dev:server": "nodemon examples/typescript/cli-agent/src/server/server.ts"
   }
 }
