--- a/examples/typescript/cli-agent/package.json
+++ b/examples/typescript/cli-agent/package.json
@@ -5,16 +5,17 @@
   "author": "Warden Labs",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "NODE_OPTIONS='--no-warnings' ts-node ./cli-agent.ts",
-    "dev": "nodemon ./cli-agent.ts",
+    "start": "node api/index.ts",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:web\"",
     "lint": "eslint -c .eslintrc.json *.ts",
     "lint-fix": "eslint -c .eslintrc.json *.ts --fix",
     "format": "prettier -c .prettierrc --write \"**/*.{ts,js,cjs,json,md}\"",
     "format-check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\"",
     "dev:web": "vite",
+    "dev:server": "NODE_ENV=development ts-node api/index.ts",
     "build": "vite build",
-    "start:server": "ts-node src/server/server.ts",
-    "dev:server": "nodemon src/server/server.ts"
+    "vercel-build": "npm run build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@langchain/anthropic": "^0.3.12",
@@ -38,6 +39,12 @@
     "vite": "^4.5.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "concurrently": "^8.0.0",
+    "typescript": "^5.0.0"
+  },
+  "engines": {
+    "node": "18.x",
+    "typescript": "^5.0.0"
   }
 }
