--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
   ],
   "packageManager": "npm@8.9.0",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.1.2",
     "turbo": "^2.3.3",
     "typedoc": "^0.27.2",
     "typescript": "^5.4.5",
-    "vite": "^6.1.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17"
+    "vite": "^6.1.0"
   },
   "dependencies": {
     "@graphql-codegen/cli": "^5.0.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "cors": "^2.8.5",
     "ethers": "^6.13.5",
+    "express": "^4.18.2",
     "graphql-request": "^7.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "react-dom": "^19.0.0"
   },
   "scripts": {
     "start": "NODE_OPTIONS='--no-warnings' ts-node ./cli-agent.ts",
